Source/WebCore: [chromium] Ignore m_skipsDraw in TiledLayerChromium::drawsContent() https://bugs.webkit.org/show_bug.cgi?id=76735

This is to add skipped layers to their RenderSurface's layer list so that they
are considered in the next update. Without this change, m_skipsDraw = false sticks
with the layer for the remainder of its lifetime.

Reviewed by James Robinson.

Tests: Unit test (TiledLayerChromiumTest.cpp)

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::drawsContent):
* platform/graphics/chromium/TiledLayerChromium.h:
(WebCore::TiledLayerChromium::skipsDraw):

Source/WebKit/chromium: Adding a test to verify that m_skipsDraw gets reset between frames for
tiled layers.
https://bugs.webkit.org/show_bug.cgi?id=76735

Reviewed by James Robinson.

* WebKit.gypi:
* tests/FakeCCLayerTreeHostClient.h: Added.
(WebCore::FakeCCLayerTreeHostClient::updateAnimations):
(WebCore::FakeCCLayerTreeHostClient::layout):
(WebCore::FakeCCLayerTreeHostClient::applyScrollAndScale):
(WebCore::FakeCCLayerTreeHostClient::createLayerTreeHostContext3D):
(WebCore::FakeCCLayerTreeHostClient::didRecreateGraphicsContext):
(WebCore::FakeCCLayerTreeHostClient::didCommitAndDrawFrame):
(WebCore::FakeCCLayerTreeHostClient::didCompleteSwapBuffers):
(WebCore::FakeCCLayerTreeHostClient::scheduleComposite):
* tests/LayerChromiumTest.cpp:
* tests/TiledLayerChromiumTest.cpp:
(WTF::FakeTiledLayerChromium::skipsDraw):
(WTF::FakeTiledLayerChromium::paintContentsIfDirty):
(WTF::TEST):


Canonical link: https://commits.webkit.org/93848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105845 268f45cc-cd09-0410-ab3c-d52691b4dbfc